--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,255 @@
-.App {
+/* for homepage */
+
+.title {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.pos{
+  text-align: center; 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.options {
+  
+  text-decoration: none;
+  font-size: large;
+  font-weight: bold;
+  height: 10%;
+  width: 10%;
+  left: 45%;
+
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.popUp {
+  border: solid;
+  border-color: black;
+  background-color: lightgrey; 
+  height: 25%;
+  width: 30%; 
+  position: absolute;
+  left: 35%; 
+  top: 15%;
+  z-index: 4; 
+}
+
+.y {
+  height: 10%;
+  width: 20%;
+  font-size: 1.2em; 
+}
+
+.n {
+  height: 10%;
+  width: 20%;
+  font-size: 1.2em;
   color: white;
+  background-color: red; 
 }
 
-.App-link {
-  color: #61dafb;
+/* for menuItem */
+.itemCard {
+
+  display: flex; 
+  flex-direction: column; 
+  height: 18em;
+  width: 18em; 
+  border-color: black; 
+  border: solid; 
+  border-radius: 30px;
+  margin: 15%; 
+  overflow: auto; 
+  text-align: center;
+  z-index: 1; 
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.itemName {
+  width: 100%;
+  height: 20%;
+  background-color: Yellow;
+  overflow: hidden;
 }
+
+.itemImage {
+  width: 100%;
+  height: 50%;
+  overflow: hidden;
+  background-color: lightgrey; 
+}
+
+.itemPrice {
+  width: 100%;
+  height: 15%;
+
+  color: green;
+  
+}
+
+.itemDesc {
+  width: 100%;
+  height: 15%; 
+  background-color: yellow; 
+  overflow: hidden; 
+}
+
+
+.itemDesc:hover {
+  height: 100%; 
+}
+
+.foodTxt {
+  position: relative;
+  left: -17%; 
+  border: none;
+  background-color: yellow; 
+  font-size: 2em;
+  text-align: center;
+  font-family: Arial, sans-serif;
+  font-weight: bolder;
+  transition: font-size 1s; 
+}
+
+.foodTxt::placeholder {
+  color: black;
+
+}
+
+.foodTxt:hover {
+  font-size: 2.2em; 
+}
+
+.priceTxt {
+  border: none;
+  background-color: white;
+  font-size: 1.5em;
+  color: green;
+  font-family: Arial, sans-serif; 
+  text-align: center; 
+  font-weight: bold; 
+  transition: font-size 1s; 
+}
+
+.priceTxt::placeholder{
+  color: green; 
+}
+
+.priceTxt:hover {
+  font-size: 1.7em;
+}
+
+.descTxt {
+  border: none;
+  background-color: yellow; 
+  color: black; 
+  font-family: Helvetica, sans-serif; 
+  font-size: 1.1em;
+  transition: font-size; 
+}
+
+.descTxt:hover {
+  font-size: 1.2em; 
+}
+
+.editIMG:hover{
+  visibility:hidden; 
+  position:relative;
+  z-index: -1; 
+}
+
+.editIMG:hover + .Burger{
+  visibility: visible; 
+}
+
+.Burger{
+  position: absolute; 
+  left: 10%;
+  top: 55%; 
+  z-index: 1; 
+  visibility: hidden; 
+}
+
+.editIMG:hover + .Pizza{
+  visibility: visible; 
+}
+
+.Pizza{
+  position: absolute; 
+  left: 77%;
+  top: 55%; 
+  z-index: 1; 
+  visibility: hidden; 
+}
+
+.editIMG:hover + .Fries{
+  visibility: visible; 
+}
+
+.Fries{
+  position: absolute; 
+  left: 43%;
+  top: 55%; 
+  z-index: 1; 
+  visibility: hidden; 
+}
+
+.remove{
+  background-color: yellow;
+}
+
+.rem {
+  float: left;
+  position: relative;
+  left: 5%;
+ 
+}
+
+
+
+/* grid container for menu card */
+
+.container {
+
+  margin-top: 5%; 
+  height: 90%;
+  width: 100%;
+  display: grid;
+  grid-template-rows: repeat(auto-fill, minmax(30%, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
+
+
+}
+
+
+
+/* form */
+
+.in {
+  position: absolute;
+  list-style: none; 
+  top: 20%; 
+  left: 40%; 
+}
+
+.desc {
+  width: 220px;
+  height: 80px; 
+
+}
+
+.subm {
+  width: 200px;
+  height: 40px;
+}
+
+.in > li {
+  padding: 5%; 
+ 
+}
+
+.txt {
+  width: 200px; 
+  height: 40px; 
+}
+
+
+
